--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -9,6 +9,22 @@ events {
 }
 
 http {
+	server {
+		listen 80;
+
+		client_max_body_size 10m;
+		root /home/isucon/private_isu/webapp/public;
+
+		location ~ ^/(favicon\.ico|css/|js/|img/) {
+			root /home/isucon/private_isu/webapp/public;
+			expires 1d;
+		}
+
+		location / {
+			proxy_set_header Host $host;
+			proxy_pass http://localhost:8080;
+		}
+	}
 
 	##
 	# Basic Settings
@@ -36,7 +52,7 @@ http {
 	# Logging Settings
 	##
 
-  log_format json escape=json '{"time":"$time_iso8601",'
+ 	log_format json escape=json '{"time":"$time_iso8601",'
                             '"host":"$remote_addr",'
                             '"port":$remote_port,'
                             '"method":"$request_method",'
