画像を静的ファイルとして配信

--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -13,11 +13,23 @@ http {
 		listen 80;
 
 		client_max_body_size 10m;
-		root /home/isucon/private_isu/webapp/public;
+		root /home/isucon/private_isu/webapp/public/;
 
 		location ~ ^/(favicon\.ico|css/|js/|img/) {
-			root /home/isucon/private_isu/webapp/public;
+			root /home/isucon/private_isu/webapp/public/;
 			expires 1d;
+		} 
+
+		# 画像ファイルがあれば配信し、なければアプリ側にプロキシ
+		location ~ ^/image/ {
+			root /home/isucon/private_isu/webapp/public/;
+			expires 1d;
+			try_files $uri @app;
+		}
+
+		location @app {
+			internal;
+			proxy_pass http://localhost:8080;
 		}
 
 		location / {
